# yapayzekavebulutbilisim

./: .gitignore  Proje Önerisi.docx  README.md  app.py  app_gradio.py  arayuz.bat  egit.bat  evaluate.py  index  kur.bat  pyproject.toml  requirements.txt  test.bat  train.py
.streamlit/: config.toml
data/: README_VERI.txt  sample.csv  sms_test.csv  sms_train.csv
models/: metrics.json
scripts/: download_sms_dataset.py  prepare_uci_sms.py  split_stratified_sms.py
spam_detector/: __init__.py  pipeline.py  preprocessing.py  training.py
src/: __init__.py  model_pipeline.py  preprocessing.py  training.py
tests/: __init__.py  test_labels.py  test_preprocessing.py  test_train_metrics_metadata.py  test_training_smoke.py
